--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </tr>
             <tr>
               <th colspan="2">
-                  <table border="1" width="850" align="center">
+                  <table border="1" width="955s" align="center">
                       <tr height="40">
                           <td><a href="pages/Soccer.html">Soccer</a></td>
                           <td><a href="pages/Basketball.html">Basketball</a></td>
